--- a/src/gui/GUI.form
+++ b/src/gui/GUI.form
@@ -150,7 +150,7 @@
               </component>
             </children>
           </grid>
-          <grid id="51229" binding="filterPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="51229" binding="filterPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -166,20 +166,21 @@
                   <text value="ToDo's mit Status"/>
                 </properties>
               </component>
-              <component id="aa4e3" class="javax.swing.JCheckBox" binding="geplantCheckBox">
+              <component id="30e52" class="javax.swing.JCheckBox" binding="allesAnzeigenCheckBox" default-binding="true">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Geplant"/>
+                  <selected value="true"/>
+                  <text value="Alles Anzeigen"/>
                 </properties>
               </component>
-              <component id="215f2" class="javax.swing.JCheckBox" binding="fertigCheckBox" default-binding="true">
+              <component id="aa4e3" class="javax.swing.JCheckBox" binding="geplantCheckBox">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Fertig"/>
+                  <text value="Geplant"/>
                 </properties>
               </component>
               <component id="d34c2" class="javax.swing.JCheckBox" binding="entfaelltCheckBox">
@@ -188,6 +189,14 @@
                 </constraints>
                 <properties>
                   <text value="Entfällt"/>
+                </properties>
+              </component>
+              <component id="215f2" class="javax.swing.JCheckBox" binding="fertigCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Fertig"/>
                 </properties>
               </component>
             </children>
@@ -239,6 +248,7 @@
       <member id="aa4e3"/>
       <member id="215f2"/>
       <member id="d34c2"/>
+      <member id="30e52"/>
     </group>
   </buttonGroups>
 </form>
